[tool.poetry]
name = "genetic-algorithms"
version = "0.1.0"
description = "Utility functions to explore the concept of genetic algorithms"
authors = ["Konstantin Petrov <konstantinpetrovtf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
